--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "eslint": "^8.20.0",
     "express": "^4.18.1",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
